Add postgress yml and connection

--- a/fin-project/src/main/resources/application.properties
+++ b/fin-project/src/main/resources/application.properties
@@ -1,13 +1,25 @@
 spring.application.name=fin-project
 
-# Configuração do banco de dados H2
-spring.datasource.url=jdbc:h2:mem:bitcoin_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+## Configuração do banco de dados H2
+#spring.datasource.url=jdbc:h2:mem:bitcoin_db
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#
+## Habilita o console web do H2 (opcional)
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+# Configuração do banco de dados PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/bitcoin_db
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-# Habilita o console web do H2 (opcional)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Mostrar queries SQL no console (opcional)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
